added java DatabricksWorkspaceClient and updated docs